--- a/about_python/basic_python_2.ipynb
+++ b/about_python/basic_python_2.ipynb
@@ -7,7 +7,7 @@
                 "id": "view-in-github"
             },
             "source": [
-                "<a href=\"https://colab.research.google.com/github/Tran-Thu-Le/share/blob/main/Seminar_210605_Python_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+                "<!-- <a href=\"https://colab.research.google.com/github/Tran-Thu-Le/share/blob/main/Seminar_210605_Python_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a> -->"
             ]
         },
         {
