--- a/gradient_methods/conditional_gradient.ipynb
+++ b/gradient_methods/conditional_gradient.ipynb
@@ -258,21 +258,15 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "base",
-      "language": "python",
-      "name": "python3"
+      "display_name": "Julia 1.8.5",
+      "language": "julia",
+      "name": "julia-1.8"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "file_extension": ".jl",
+      "mimetype": "application/julia",
+      "name": "julia",
+      "version": "1.8.5"
     },
     "vscode": {
       "interpreter": {
