--- a/about_python/basic_python_2.ipynb
+++ b/about_python/basic_python_2.ipynb
@@ -212,9 +212,9 @@
             "toc_visible": true
         },
         "kernelspec": {
-            "display_name": "local-venv",
+            "display_name": "Python 3",
             "language": "python",
-            "name": "local-venv"
+            "name": "python3"
         },
         "language_info": {
             "codemirror_mode": {
@@ -226,7 +226,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.6.9"
+            "version": "3.8.0"
         },
         "vscode": {
             "interpreter": {
