update finance applications

--- a/finance_applications/portfolio_selection.ipynb
+++ b/finance_applications/portfolio_selection.ipynb
@@ -20,12 +20,12 @@
     "\n",
     "## Problem description\n",
     "\n",
-    "An investment company plans to use an investment fund of $500,000,000 to buy some shares in the stock market. The Company sets limits based on the purchase amount of each type of securities for the purpose of diversifying the portfolio to hedge risk. The table provides the limits as well as the interest rates of the stocks:\n",
+    "An investment company plans to use an investment fund of $500M to buy some shares in the stock market. The Company sets limits based on the purchase amount of each type of securities for the purpose of diversifying the portfolio to hedge risk. The table provides the limits as well as the interest rates of the stocks:\n",
     "\n",
-    "- Stock A, expected return 7%  , limit to buy 100 000 shares\n",
-    "- Stock B, expected return 8.5%, limit to buy 300,000 shares\n",
-    "- Stock C, expected return 7.8%, limit to buy 250,000 shares\n",
-    "- Stock D, expected return 8.2%, limit to buy 320,000 shares\n",
+    "- Stock A, expected return 7%  , limit to buy $100M\n",
+    "- Stock B, expected return 8.5%, limit to buy $300M\n",
+    "- Stock C, expected return 7.8%, limit to buy $250M\n",
+    "- Stock D, expected return 8.2%, limit to buy $320M\n",
     "\n",
     "In addition, to prevent investment risks, the company also stipulates that\n",
     "- the investment in class A and C shares must account for at least 55%,\n",
@@ -36,17 +36,17 @@
     "\n",
     "## Mathematical formulation\n",
     "\n",
-    "The problem can be formulated as a linear programming problem by defining decision variables $x_1, x_2, ..., x_n$ that represent the percentage of the investment allocated to each asset. The problem can then be stated as a linear programming model:\n",
+    "The problem can be formulated as a linear programming problem by defining decision variables $x_1, x_2, ..., x_n$ that represent the percentage of the total investment allocated to each asset. The problem can then be stated as a linear programming model:\n",
     "\n",
     "$\\begin{aligned}\n",
-    "\\underset{\\substack{\\mathbf{x}}}{\\mathrm{max}} \\quad & 0,07x_1 + 0,085x_2 + 0,078x_3 + 0,082 x_4 \\\\\n",
-    "\\text{subject to} \\quad & x_1 + x_3 \\ge 0,55 \\left( x_1+x_2+x_3+x_4\\right)\\\\\n",
-    "\\quad & x_2 \\ge 0,15 \\left(x_1+x_2+x_3+x_4 \\right)\\\\\n",
-    "\\quad & x_1+x_2+x_3+x_4 \\le 500000\\\\\n",
-    "\\quad & 0 \\le x_1 \\le 100 000 \\\\\n",
-    " \\quad & 0 \\le x_2 \\le 300 000 \\\\\n",
-    " \\quad & 0 \\le x_3 \\le 250 000 \\\\\n",
-    " \\quad & 0 \\le x_4 \\le 320 000\n",
+    "\\underset{\\substack{\\mathbf{x}}}{\\mathrm{max}} \\quad & 0.07x_1 + 0.085x_2 + 0.078x_3 + 0.082 x_4 \\\\\n",
+    "\\text{subject to} \\quad & x_1 + x_3 \\ge 0.55 \\left( x_1+x_2+x_3+x_4\\right)\\\\\n",
+    "\\quad & x_2 \\ge 0.15 \\left(x_1+x_2+x_3+x_4 \\right)\\\\\n",
+    "\\quad & x_1+x_2+x_3+x_4 \\le 500\\\\\n",
+    "\\quad & 0 \\le x_1 \\le 100 \\\\\n",
+    " \\quad & 0 \\le x_2 \\le 300 \\\\\n",
+    " \\quad & 0 \\le x_3 \\le 250 \\\\\n",
+    " \\quad & 0 \\le x_4 \\le 320\n",
     " \\end{aligned}\n",
     "$\n",
     "​"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
      "output_type": "stream",
      "text": [
       "Solving sucessfully: True\n",
-      "Optimal strategy: [100000.         286363.63636364 250000.              0.        ]\n"
+      "Optimal strategy: [ 25. 225. 250.   0.]\n"
      ]
     }
    ],
@@ -77,13 +77,13 @@
     "Aineq = [[-0.45,0.55,-0.45,0.55],\n",
     "         [0.15,-0.85,0.15,0.15],\n",
     "         [1,1,1,1]]\n",
-    "bineq = [0,0,5e8]\n",
+    "bineq = [0,0,500]\n",
     "\n",
     "# Define the bounds on the variables\n",
-    "x1_bounds = (0, 100000)\n",
-    "x2_bounds = (0, 300000)\n",
-    "x3_bounds = (0, 250000)\n",
-    "x4_bounds = (0, 320000)\n",
+    "x1_bounds = (0, 100)\n",
+    "x2_bounds = (0, 300)\n",
+    "x3_bounds = (0, 250)\n",
+    "x4_bounds = (0, 320)\n",
     "# Solve the linear programming problem\n",
     "res = linprog(c, A_ub=Aineq, b_ub=bineq,\n",
     "              bounds=[x1_bounds, x2_bounds, x3_bounds, x4_bounds],\n",
