update repo for changing laptop

--- a/machine_learning/SVM_MNIST.ipynb
+++ b/machine_learning/SVM_MNIST.ipynb
@@ -26,54 +26,7 @@
     "\n",
     "The [MNIST dataset](https://scikit-learn.org/stable/auto_examples/classification/plot_digits_classification.html) consists of grayscale images of handwritten digits from 0 to 9. Each image is represented by a matrix of pixel values. To classify the MNIST dataset using SVM, we can adopt the One-vs-Rest (OVR) strategy. This approach trains multiple binary classifiers, where each classifier distinguishes one class from the rest. In our code example, we use scikit-learn's `svm.SVC` class with a linear kernel and the OVR decision function shape.\n",
     "\n",
-    "## 4. Code Implementation\n",
-    "\n",
-    "```python\n",
-    "# Code for SVM classification of the MNIST dataset\n",
-    "\n",
-    "# Import necessary libraries\n",
-    "from sklearn import datasets\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import svm\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "# Load the MNIST dataset\n",
-    "digits = datasets.load_digits()\n",
-    "X = digits.data / 16.0\n",
-    "y = digits.target\n",
-    "\n",
-    "# Split the dataset into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Create an SVM classifier with a linear kernel and OvR strategy\n",
-    "clf = svm.SVC(kernel='linear', decision_function_shape='ovr')\n",
-    "\n",
-    "# Train the SVM model and predict the labels for the testing data\n",
-    "clf.fit(X_train, y_train) \n",
-    "y_pred = clf.predict(X_test)\n",
-    "\n",
-    "# Evaluate the accuracy of the model\n",
-    "accuracy = clf.score(X_test, y_test)\n",
-    "print(\"Accuracy:\", accuracy)\n",
-    "\n",
-    "# Select 8 random samples from the testing set\n",
-    "random_indices = np.random.choice(len(X_test), size=8, replace=False)\n",
-    "X_samples = X_test[random_indices]\n",
-    "y_samples = y_pred[random_indices]\n",
-    "\n",
-    "# Create a figure with 2x4 subplots\n",
-    "fig, axes = plt.subplots(2, 4, figsize=(2*4, 2*2))\n",
-    "\n",
-    "# Iterate through each subplot and plot the sample with the predicted label\n",
-    "for i, ax in enumerate(axes.flat):\n",
-    "    ax.imshow(X_samples[i].reshape(8, 8), cmap='gray')\n",
-    "    ax.set_title(f\"Predicted: {y_samples[i]}\")\n",
-    "    ax.axis('off')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "```"
+    "## 4. Code Implementation\n"
    ]
   },
   {
